--- a/Traffic_Signs_Recognition.ipynb
+++ b/Traffic_Signs_Recognition.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -52,6 +52,8 @@
     "import cv2\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.contrib.layers import flatten\n",
     "\n",
     "random.seed(42)\n",
     "random_state = 42\n",
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +457,7 @@
     "                    'train_labels': y_train_final,\n",
     "                    'valid_dataset': X_valid,\n",
     "                    'valid_labels': y_valid,\n",
-    "                    'test_dataset': X_test,\n",
+    "                    'test_dataset': X_test_GCN,\n",
     "                    'test_labels': y_test_labels,\n",
     "                },\n",
     "                pfile, pickle.HIGHEST_PROTOCOL)\n",
@@ -488,14 +490,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data and modules loaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Define your architecture here.\n",
+    "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "# Reload the data\n",
+    "pickle_file = 'TrafficSigns.pickle'\n",
+    "with open(pickle_file, 'rb') as f:\n",
+    "  pickle_data = pickle.load(f)\n",
+    "  X_train = pickle_data['train_dataset']\n",
+    "  y_train = pickle_data['train_labels']\n",
+    "  X_valid = pickle_data['valid_dataset']\n",
+    "  y_valid = pickle_data['valid_labels']\n",
+    "  X_test = pickle_data['test_dataset']\n",
+    "  y_test = pickle_data['test_labels']\n",
+    "  del pickle_data  # Free up memory\n",
+    "\n",
+    "print('Data and modules loaded.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "### Define your architecture here.\n",
-    "### Feel free to use as many code cells as needed."
+    "EPOCHS = 20\n",
+    "BATCH_SIZE = 100\n",
+    "\n",
+    "def convNet(x):\n",
+    "    # 30x30x6\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(3, 3, 1, 6)))\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1 = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\n",
+    "    # 15x15x6\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # 13x13x16\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(3, 3, 6, 16)))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2 = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "\n",
+    "    # 6x6x16\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "    \n",
+    "    # 4x4x32\n",
+    "    conv3_W = tf.Variable(tf.truncated_normal(shape=(3, 3, 16, 32)))\n",
+    "    conv3_b = tf.Variable(tf.zeros(32))\n",
+    "    conv3 = tf.nn.conv2d(conv2, conv3_W, strides=[1, 1, 1, 1], padding='VALID') + conv3_b\n",
+    "\n",
+    "    conv3 = tf.nn.relu(conv3)\n",
+    "\n",
+    "    # 2x2x32\n",
+    "    conv3 = tf.nn.max_pool(conv3, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # Flatten\n",
+    "    fc1 = tf.concat(1, [flatten(conv1), flatten(conv2), flatten(conv3)])\n",
+    "    # (2054, 300)\n",
+    "    fc1_shape = (fc1.get_shape().as_list()[-1], 300)\n",
+    "\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(fc1_shape)))\n",
+    "    fc1_b = tf.Variable(tf.zeros(300))\n",
+    "    fc1 = tf.matmul(fc1, fc1_W) + fc1_b\n",
+    "    fc1 = tf.nn.relu(fc1)\n",
+    "\n",
+    "    fc2_W = tf.Variable(tf.truncated_normal(shape=(300, 43)))\n",
+    "    fc2_b = tf.Variable(tf.zeros(43))\n",
+    "    return tf.matmul(fc1, fc2_W) + fc2_b\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 1))\n",
+    "y = tf.placeholder(tf.float32, (None, 43))\n",
+    "fc2 = convNet(x)\n",
+    "\n",
+    "loss_op = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(fc2, y)) \n",
+    "global_step = tf.Variable(0)\n",
+    "learning_rate = tf.train.exponential_decay(0.005, global_step, 10000, 0.95)\n",
+    "opt = tf.train.AdagradOptimizer(learning_rate)\n",
+    "train_op = opt.minimize(loss_op, global_step=global_step)\n",
+    "correct_prediction = tf.equal(tf.argmax(fc2, 1), tf.argmax(y, 1))\n",
+    "accuracy_op = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "\n",
+    "def eval_data(dataset, labels):\n",
+    "    \"\"\"\n",
+    "    Given a dataset as input returns the loss and accuracy.\n",
+    "    \"\"\"\n",
+    "    steps_per_epoch = labels.shape[0] // BATCH_SIZE\n",
+    "    num_examples = steps_per_epoch * BATCH_SIZE\n",
+    "    total_acc, total_loss = 0, 0\n",
+    "    sess = tf.get_default_session()\n",
+    "    for step in range(steps_per_epoch):\n",
+    "        offset = (step * BATCH_SIZE) % (labels.shape[0] - BATCH_SIZE)\n",
+    "        batch_x = dataset[offset:(offset + BATCH_SIZE), :, :, :]\n",
+    "        batch_y = labels[offset:(offset + BATCH_SIZE), :]\n",
+    "        loss, acc = sess.run([loss_op, accuracy_op], feed_dict={x: batch_x, y: batch_y})\n",
+    "        total_acc += (acc * batch_x.shape[0])\n",
+    "        total_loss += (loss * batch_x.shape[0])\n",
+    "    return total_loss/num_examples, total_acc/num_examples\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH 1 ...\n",
+      "Validation loss = 1713.284\n",
+      "Validation accuracy = 0.208\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation loss = 1129.619\n",
+      "Validation accuracy = 0.288\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation loss = 877.926\n",
+      "Validation accuracy = 0.331\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation loss = 728.085\n",
+      "Validation accuracy = 0.370\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation loss = 631.809\n",
+      "Validation accuracy = 0.399\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation loss = 561.150\n",
+      "Validation accuracy = 0.420\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation loss = 507.235\n",
+      "Validation accuracy = 0.441\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation loss = 464.983\n",
+      "Validation accuracy = 0.457\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation loss = 429.670\n",
+      "Validation accuracy = 0.465\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation loss = 399.093\n",
+      "Validation accuracy = 0.481\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation loss = 372.693\n",
+      "Validation accuracy = 0.496\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation loss = 350.147\n",
+      "Validation accuracy = 0.506\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation loss = 330.744\n",
+      "Validation accuracy = 0.517\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation loss = 313.597\n",
+      "Validation accuracy = 0.531\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation loss = 298.349\n",
+      "Validation accuracy = 0.537\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation loss = 284.878\n",
+      "Validation accuracy = 0.548\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation loss = 272.752\n",
+      "Validation accuracy = 0.554\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation loss = 261.592\n",
+      "Validation accuracy = 0.563\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation loss = 251.380\n",
+      "Validation accuracy = 0.571\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation loss = 242.023\n",
+      "Validation accuracy = 0.576\n",
+      "\n",
+      "Test loss = 396.092\n",
+      "Test accuracy = 0.492\n"
+     ]
+    }
+   ],
+   "source": [
+    "init = tf.initialize_all_variables()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    steps_per_epoch = y_train.shape[0] // BATCH_SIZE\n",
+    "    num_examples = steps_per_epoch * BATCH_SIZE\n",
+    "\n",
+    "    # Train model\n",
+    "    for i in range(EPOCHS):\n",
+    "        for step in range(steps_per_epoch):\n",
+    "            offset = (step * BATCH_SIZE) % (y_train.shape[0] - BATCH_SIZE)\n",
+    "            batch_x = X_train[offset:(offset + BATCH_SIZE), :, :, :]\n",
+    "            batch_y = y_train[offset:(offset + BATCH_SIZE), :]\n",
+    "            loss = sess.run(train_op, feed_dict={x: batch_x, y: batch_y})\n",
+    "\n",
+    "        val_loss, val_acc = eval_data(X_valid, y_valid)\n",
+    "        print(\"EPOCH {} ...\".format(i+1))\n",
+    "        print(\"Validation loss = {:.3f}\".format(val_loss))\n",
+    "        print(\"Validation accuracy = {:.3f}\".format(val_acc))\n",
+    "        print()\n",
+    "\n",
+    "    # Evaluate on the test data\n",
+    "    test_loss, test_acc = eval_data(X_test, y_test)\n",
+    "    print(\"Test loss = {:.3f}\".format(test_loss))\n",
+    "    print(\"Test accuracy = {:.3f}\".format(test_acc))"
    ]
   },
   {
