--- a/Traffic_Signs_Recognition.ipynb
+++ b/Traffic_Signs_Recognition.ipynb
@@ -841,7 +841,7 @@
     "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
     "            loss = sess.run(train_op, feed_dict={x: batch_x, y: batch_y})\n",
     "            \n",
-    "        valid_loss, valid_accuracy = evaluate(X_valid, y_valid)\n",
+    "        valid_loss, valid_accuracy = eval_data(X_valid, y_valid)\n",
     "        print(\"EPOCH {} ...\".format(i+1))\n",
     "        print(\"Validation Loss     = {:.3f}\".format(valid_loss))\n",
     "        print(\"Validation Accuracy = {:.3f}\".format(valid_accuracy))\n",
