--- a/Traffic_Signs_Recognition.ipynb
+++ b/Traffic_Signs_Recognition.ipynb
@@ -809,7 +809,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "I use a deep CNN model with a structure inspired from VGG but smaller size.\n",
+    "\n",
+    "Totally 11 layers:\n",
+    "\n",
+    "Conv1_1(3x3x16) -> Conv1_2(3x3x16) -> Max_Pool -> Dropout -> \n",
+    "Conv2_1(3x3x32) -> Conv2_2(3x3x64) -> Max_Pool -> Dropout -> \n",
+    "Conv3_1(3x3x128) -> Conv3_2(3x3x256) -> Max_Pool -> Dropout -> \n",
+    "FC1(5760x512) -> Dropout -> FC2(512x43)\n",
+    "\n",
+    "After each Conv layer, a RELU is applied. \n",
+    "\n",
+    "FC1 layer is concatenated of outputs of each Dropout layer in order to provide different scales of receptive fields to the classifier (*Sermanet & LeCun, 2011*)\n",
+    "\n",
+    "The total number of parameters is about 3.37M.\n",
+    "\n",
+    "\n",
+    "REFERENCE:\n",
+    "* Traffic sign recognition with multi-scale Convolutional Networks, 2011, Pierre Sermanet and Yann LeCun, *Conference: Neural Networks (IJCNN), The 2011 International Joint Conference on*."
    ]
   },
   {
@@ -996,7 +1015,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The model was trained on an AWS EC2 instance for GPU support.\n",
+    "\n",
+    "Adam optimizer is applied in this model. Batch size is 64. 30 epochs are used. Dropout rate is 0.5. The parameter of beta for the weight of L2 regularizer is set to 0.001."
    ]
   },
   {
@@ -1013,7 +1036,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "Both Dropout and L2 regularization are applied in this model. Exponential decay learning rate is used.\n",
+    "\n",
+    "A key point of this model is to use Xavier initializers for conv2d instead of truncated normal initializer. Using truncated normal initializers will yield a very low and unchanged validation accuracy and will eventually fail the training. Xavier initializers successfully solve the problem."
    ]
   },
   {
@@ -1104,7 +1131,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "Totally 12 traffic signs are selected from online sources. They are consist of 4 Yield signs, 4 Stop signs, and 4 No Entry signs. One of Yield signs has a man hanging on it, and one of Stop signs and one of No Entry signs have other words or graffiti on them. These may cause prediction failure. Some sign pictures are angled so the images are distorted."
    ]
   },
   {
@@ -1266,7 +1295,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The picture of Yield sign with a man hanging on it and the picture of Stop sign with graffiti on it are failed to be correctly recognized. Others are recognized correctly."
    ]
   },
   {
@@ -1318,7 +1349,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The softmax probabilities of each image are plotted, and the top 5 probabilities are marked with crosses and labeled with their classes.\n",
+    "\n",
+    "It seems like 0.5 is a criterion of model certainty. All correct predictions have a softmax probability greater than 0.5. Both incorrect predictions don't have a softmax probability greater than 0.5. \n",
+    "\n",
+    "The correct predictions appears in the top 5 probabilities."
    ]
   },
   {
