feat: updated P2: Traffic_Signs_Recognition.ipynb
Updated Traffic_Signs_Recognition.ipynb with revised answers. No code change.

--- a/Traffic_Signs_Recognition.ipynb
+++ b/Traffic_Signs_Recognition.ipynb
@@ -325,7 +325,16 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "OpenCV library has been used to converted all images from colorspace RGB to grayscale, and then applied a normalization to all images in both training set and testing set to a range from 0 to 1."
+    "OpenCV library has been used to converted all images from colorspace RGB to grayscale, and then applied a normalization to all images in both training set and testing set to a range from 0 to 1.\n",
+    "\n",
+    "These preprocessing procedure is following the paper by Sermanet and LeCun, 2011. Converting colorspace to grayscale will effectively reduce the computing resource requirements, but it will also lose all color information in original images. In the paper, it has demonstrated that using only grayscale images may even decrease validation errors.\n",
+    "\n",
+    "The normalization is similar to a Global Contrast Normalization, which will normalize the data and enhance image contrast. It also increase numerical stability and get easier for optimation to proceed numerically.\n",
+    "\n",
+    "    \n",
+    "\n",
+    "Reference:\n",
+    "* Traffic Sign Recognition with Multi-Scale Convolutional Networks, P. Sermanet and Y. LeCun, Proceedings of IJCNN, 2011."
    ]
   },
   {
@@ -1297,7 +1306,9 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "The picture of Yield sign with a man hanging on it and the picture of Stop sign with graffiti on it are failed to be correctly recognized. Others are recognized correctly."
+    "The picture of Yield sign with a man hanging on it and the picture of Stop sign with graffiti on it are failed to be correctly recognized. Others are recognized correctly.\n",
+    "\n",
+    "From the prediction I did to the candidate images, the testing accuracy is 10/12 = 83.3%, however, the model prediction accuracy on the validation set and testing set were 97.1% and 94.3%, respectively. My model did not yield a result in the candidate images as good as in the testing dateset. The reason is probably that I intentionally picked difficult images as my candidate images for testing."
    ]
   },
   {
